--- a/_posts/2014-05-21-ac18-tw-org.md
+++ b/_posts/2014-05-21-ac18-tw-org.md
@@ -7,7 +7,7 @@ categories: AboutCommunity
 tags: 关乎社群 ac community
 ---
 
-![](http://zoomq.qiniudn.com/DRM2KN/140521-tw-gifts.png)
+![](http://q.zoomquiet.top/DRM2KN/140521-tw-gifts.png)
 
 因为 [5/18 台北CMClub 見面會](http://blog.crxpower.org/2014-05/zq-cmclub-tw/)
 的关系, 大妈终于有机会拜访著名的宝岛了!
@@ -52,11 +52,11 @@ tags: 关乎社群 ac community
 - [台北GDG](http://www.taipei-gtug.org)
 
 <img height="100"
-    src="http://zoomq.qiniudn.com/ZHGDG/2014/140514-tw-gdg-pyug/py_gdg-colin-su.png"/> +Colin Su
+    src="http://q.zoomquiet.top/ZHGDG/2014/140514-tw-gdg-pyug/py_gdg-colin-su.png"/> +Colin Su
 在 PyCon2014 APAC 上有两场演讲的强人,而且专程带了家属来显摆...嗯嗯嗯,的确是美女的啦...
 
 <img height="100"
-    src="http://zoomq.qiniudn.com/ZHGDG/2014/140514-tw-gdg-pyug/py_gasolin.png"/> +gaso lin
+    src="http://q.zoomquiet.top/ZHGDG/2014/140514-tw-gdg-pyug/py_gasolin.png"/> +gaso lin
 是最熟悉的 Pythoneer 了,
 ![](https://code.google.com/p/zhpy/logo?cct=1252085888)
 [周蠎](https://code.google.com/p/zhpy/) 创始人,
@@ -64,17 +64,17 @@ tags: 关乎社群 ac community
 现在 Mozilla 台湾公司供职.
 
 <img height="100"
-    src="http://zoomq.qiniudn.com/ZHGDG/2014/140514-tw-gdg-pyug/gdg_shaka-huang.png"/> +Shaka Huang
+    src="http://q.zoomquiet.top/ZHGDG/2014/140514-tw-gdg-pyug/gdg_shaka-huang.png"/> +Shaka Huang
 极酷的帅男.
 
 <img height="100"
-    src="http://zoomq.qiniudn.com/ZHGDG/2014/140514-tw-gdg-pyug/gdg_ted-chien.png"/> +Ted Chien
+    src="http://q.zoomquiet.top/ZHGDG/2014/140514-tw-gdg-pyug/gdg_ted-chien.png"/> +Ted Chien
 迟到的 维基百科编辑!
 
 - [taipei.py](http://taipei.python.org.tw)
 
 <img height="100"
-    src="http://zoomq.qiniudn.com/ZHGDG/2014/140514-tw-gdg-pyug/py_keith-yang.png"/>
+    src="http://q.zoomquiet.top/ZHGDG/2014/140514-tw-gdg-pyug/py_keith-yang.png"/>
 标准的张江男身材的管理员 ;-)
 
 
@@ -125,19 +125,19 @@ tags: 关乎社群 ac community
 他们是 資訊科技創新研究中心:
 
 - <img height="100"
-    src="http://zoomq.qiniudn.com/ZHGDG/2014/140515-tw-ossf/big-chao.png"/>
+    src="http://q.zoomquiet.top/ZHGDG/2014/140515-tw-ossf/big-chao.png"/>
     大超 运营企划
 
 - <img height="100"
-    src="http://zoomq.qiniudn.com/ZHGDG/2014/140515-tw-ossf/cat.png"/>
+    src="http://q.zoomquiet.top/ZHGDG/2014/140515-tw-ossf/cat.png"/>
     cat 运营助理
 
 - <img height="100"
-    src="http://zoomq.qiniudn.com/ZHGDG/2014/140515-tw-ossf/dong-mei.png"/>
+    src="http://q.zoomquiet.top/ZHGDG/2014/140515-tw-ossf/dong-mei.png"/>
     冬梅 法政研究
 
 - <img height="100"
-    src="http://zoomq.qiniudn.com/ZHGDG/2014/140515-tw-ossf/lcx.png"/>
+    src="http://q.zoomquiet.top/ZHGDG/2014/140515-tw-ossf/lcx.png"/>
     林诚夏 资深顾问 
 
 
@@ -153,7 +153,7 @@ tags: 关乎社群 ac community
     (三)促進臺灣人才培育與產業合作
     (四)與國際趨勢交流接軌
 
-![](http://zoomq.qiniudn.com/ZHGDG/2014/140515-tw-ossf/sinica-edu-tw.png)
+![](http://q.zoomquiet.top/ZHGDG/2014/140515-tw-ossf/sinica-edu-tw.png)
 
 漫步在没有围墙的中研院,感觉是在一个大学里,
 和大家,坐在图书馆的一个 cafe 馆里,当面沟通,才知道:
@@ -181,7 +181,7 @@ tags: 关乎社群 ac community
 这次课程,顺便也就同今年 COSCUP 的核心组织者进行了当面沟通
 
 当然的,先在 <img height="100"
-    src="http://zoomq.qiniudn.com/ZHGDG/2014/140516-tw-ukik/shiashia.jpg"/>
+    src="http://q.zoomquiet.top/ZHGDG/2014/140516-tw-ukik/shiashia.jpg"/>
 
 蝦蝦 指引下,品尝了号称台北一 的
 `寥家牛肉面` !
@@ -192,7 +192,7 @@ tags: 关乎社群 ac community
 
 本次课程说的是
 <img height="100"
-    src="http://zoomq.qiniudn.com/ZHGDG/2014/140516-tw-ukik/leader-huang.png"/>
+    src="http://q.zoomquiet.top/ZHGDG/2014/140516-tw-ukik/leader-huang.png"/>
 黄立夫
 创办的 [CPR Team](http://cprteam.org/)
 `Cable Power Radio` ~ 线路组
@@ -202,26 +202,26 @@ tags: 关乎社群 ac community
 
 幸好俺有录音:
 
-- [录音 ukik-18-1.MP](http://zoomq.qiniudn.com/ZHGDG/2014/140516-tw-ukik/140516-ukik-18-1.MP3)
+- [录音 ukik-18-1.MP](http://q.zoomquiet.top/ZHGDG/2014/140516-tw-ukik/140516-ukik-18-1.MP3)
     - 问题: 一次百人左右的技术活动,如何在没有
-- [录音 ukik-18-2.MP](http://zoomq.qiniudn.com/ZHGDG/2014/140516-tw-ukik/140516-ukik-18-2.MP3)
+- [录音 ukik-18-2.MP](http://q.zoomquiet.top/ZHGDG/2014/140516-tw-ukik/140516-ukik-18-2.MP3)
     - 问题: 太阳花现场的wifi 架设故事
-- [录音 ukik-18-3.MP](http://zoomq.qiniudn.com/ZHGDG/2014/140516-tw-ukik/140516-ukik-18-3.MP3)
+- [录音 ukik-18-3.MP](http://q.zoomquiet.top/ZHGDG/2014/140516-tw-ukik/140516-ukik-18-3.MP3)
     - 问题: 为毛要创建线路组? ~ `就是为了爽!`
-- [录音 ukik-18-4.MP](http://zoomq.qiniudn.com/ZHGDG/2014/140516-tw-ukik/140516-ukik-18-4-love.MP3)
+- [录音 ukik-18-4.MP](http://q.zoomquiet.top/ZHGDG/2014/140516-tw-ukik/140516-ukik-18-4-love.MP3)
     - 问题: 个人感觉最爽的是哪一刻?
-- [录音 ukik-18-5.MP](http://zoomq.qiniudn.com/ZHGDG/2014/140516-tw-ukik/140516-ukik-18-5.MP3)
+- [录音 ukik-18-5.MP](http://q.zoomquiet.top/ZHGDG/2014/140516-tw-ukik/140516-ukik-18-5.MP3)
     - 虚问实答: 团队感情处置
-- [录音 ukik-18-6.MP](http://zoomq.qiniudn.com/ZHGDG/2014/140516-tw-ukik/140516-ukik-18-6-end.MP3)
+- [录音 ukik-18-6.MP](http://q.zoomquiet.top/ZHGDG/2014/140516-tw-ukik/140516-ukik-18-6-end.MP3)
     - 总结: 偏執狂的形成和未来
 
 现场的高人:
 
 <img height="100"
-    src="http://zoomq.qiniudn.com/ZHGDG/2014/140516-tw-ukik/ukik-1.png"/>
+    src="http://q.zoomquiet.top/ZHGDG/2014/140516-tw-ukik/ukik-1.png"/>
     瘾科技的编辑;
 <img height="100"
-    src="http://zoomq.qiniudn.com/ZHGDG/2014/140516-tw-ukik/ukik-2.png"/>
+    src="http://q.zoomquiet.top/ZHGDG/2014/140516-tw-ukik/ukik-2.png"/>
     MozTW的管理员.
 
 
@@ -275,11 +275,11 @@ http://tw.pyladies.com 是这样一个社区:
 
 
 <img height="520"
-    src="http://zoomq.qiniudn.com/ZHGDG/2014/140517-tw-pyladies/pyladies-shanma.png"/>
+    src="http://q.zoomquiet.top/ZHGDG/2014/140517-tw-pyladies/pyladies-shanma.png"/>
 
 合影中缺少,先被呼走的医生:
 <img height="100"
-    src="http://zoomq.qiniudn.com/ZHGDG/2014/140517-tw-pyladies/doctor.png"/>
+    src="http://q.zoomquiet.top/ZHGDG/2014/140517-tw-pyladies/doctor.png"/>
 
 但是,具体的 谁是谁, 俺只能说: `你猜;-)`
 
