👌 IMPROVE: fix link 7niu

--- a/_posts/2014-12-15-ac20-need-what.md
+++ b/_posts/2014-12-15-ac20-need-what.md
@@ -26,10 +26,10 @@ tags: 关乎社群 ac community
     
 最近比较集中的有关技术社区生态的演讲:
 
-- 幻灯: [Zoom.Quiet_just4fun_v140329.pdf](http://zoomq.qiniudn.com/ZQCollection/presentations/Zoom.Quiet_just4fun_v140329.pdf)
+- 幻灯: [Zoom.Quiet_just4fun_v140329.pdf](http://0.zoomquiet.top/ZQCollection/presentations/Zoom.Quiet_just4fun_v140329.pdf)
 - 录音:
-    + [140330_ostc_pm1_zoomquiet.MP3](http://zoomq.qiniudn.com/CPyUG/140330-OSTC/140330_ostc_pm1_zoomquiet.MP3)
-    + [140330_ostc_pm2_zq_qa.MP3](http://zoomq.qiniudn.com/CPyUG/140330-OSTC/140330_ostc_pm2_zq_qa.MP3)
+    + [140330_ostc_pm1_zoomquiet.MP3](http://0.zoomquiet.top/CPyUG/140330-OSTC/140330_ostc_pm1_zoomquiet.MP3)
+    + [140330_ostc_pm2_zq_qa.MP3](http://0.zoomquiet.top/CPyUG/140330-OSTC/140330_ostc_pm2_zq_qa.MP3)
 - 录像: [20140330-OSTC-分论坛2周琦](http://v.youku.com/v_show/id_XNjk2OTcyODQ4.html?f=22140134)
 
 
@@ -109,4 +109,5 @@ tags: 关乎社群 ac community
 
 ## Change log
 
+- 200128 fix old link
 - 141215 被设问尝试回答第一版
